--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,9 @@ background-color: #FFC017;
 {
     font-size: 13px;
 }
+.font-face {
+    font-family: "Nexa";
+    src: url("Nexa-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
