--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ background-color: #FFC017;
 .font-face {
     font-family: "Nexa";
     src: url("Nexa-Regular.ttf") format("truetype");
-    font-weight: 400;
+    font-weight: 100;
     font-style: normal;
+}
+.btn-box
+{
+    margin-bottom: 10px;
+    margin-right: 8px;
 }
